-Made two activities- Main and PieChart -Linked two activities using intents and buttons -implemented pieChart API -Styled pieChart and added dummy data

--- a/app/src/main/res/layout/activity_pie_chart.xml
+++ b/app/src/main/res/layout/activity_pie_chart.xml
@@ -4,13 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".PieChartActivity">
 
-
-    <Button
-        android:id="@+id/showPie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ShowPie"></Button>
-
+    <com.github.mikephil.charting.charts.PieChart
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/idPieChart"></com.github.mikephil.charting.charts.PieChart>
 </RelativeLayout>
